@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * omit the client_secret parameter if it is an empty string while refreshing token (thanks to https://github.com/KungfuPancake)
+ * allow perms to be specified in Flickr Api (read, write, or delete) (thanks to https://github.com/rogerhu)
 
 [4.1.0]
  * make client_secret optional in OAuth2 while requesting AccessToken (if set to null, it's not required by OAuth2 specs)
